--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -11,9 +11,8 @@
 .logo-text {
   margin: 0;
   color: #595653;
-  font-family: "Golos Text", sans-serif;
+  font-family: "Golos Text Bold", sans-serif;
   text-transform: uppercase;
   font-size: 16.65px;
-  font-weight: 700;
   line-height: 17.98px;
 }
